Funcion Toast y Contador Funcionando - Indiviual 5

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,9 @@
 
     <TextView
         android:id="@+id/textContador"
-        android:layout_width="56dp"
-        android:layout_height="134dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="center"
         android:text="0"
         android:textSize="100dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonContador"
@@ -22,13 +23,12 @@
         android:id="@+id/buttonContador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="212dp"
         android:text="Contador"
         android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/textContador"
         app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="@+id/textContador"
-        app:layout_constraintTop_toBottomOf="@+id/buttonToast" />
+        app:layout_constraintStart_toStartOf="@+id/textContador" />
 
     <Button
         android:id="@+id/buttonToast"
